--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "xpath": "*",
     "xmldom": "*",
     "aws-sdk": "*",
-    "dynamodb-doc":"*"
+    "dynamodb-doc":"*",
+    "tough-cookie":"*"
   },
   "devDependencies": {
     "mocha": "^2.1.0",
