--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "tough-cookie":"*"
   },
   "devDependencies": {
-    "mocha": "^2.1.0",
-    "should": "^5.0.1"
+    "mocha": "*",
+    "should": "*"
   }
 }
 
