fixed DdbUserTest and added mailmanager to send emails, but didn't pass all tests

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "xmldom": "*",
     "aws-sdk": "*",
     "dynamodb-doc":"*",
-    "tough-cookie":"*"
+    "tough-cookie":"*",
+    "mailgun-js":"*",
+    "mailgun-email-validation":"*"
   },
   "devDependencies": {
     "mocha": "*",
