added new user, update, dropped using mailgun-validator package in favor of direct call to mailgun api

--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "aws-sdk": "*",
     "dynamodb-doc":"*",
     "tough-cookie":"*",
-    "mailgun-js":"*",
-    "mailgun-email-validation":"*"
+    "mailgun-js":"*"
   },
   "devDependencies": {
     "mocha": "*",
