(major) factor out urls of services (pml, isf, dawlati) to urls.json file + fix url for pml. This was causing a major hang in app refresh

--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
     "xpath": "*",
     "xmldom": "*",
     "aws-sdk": "*",
-    "dynamodb-doc":"*",
-    "tough-cookie":"*",
-    "mailgun-js":"*",
-    "request":"*"
+    "dynamodb-doc": "*",
+    "tough-cookie": "*",
+    "mailgun-js": "*"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "*"
   }
 }
-
